[tool.poetry]
name = "shikajiro.github.com"
version = "0.1.0"
description = ""
authors = ["shikajiro <shikajiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.8.0"
markdown = "^3.2.2"
typogrify = "^2.0.7"
pelican-gist = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
